upload file to minIO
